--- a/PS2.ipynb
+++ b/PS2.ipynb
@@ -12,7 +12,8 @@
     "from numpy.random import randint\n",
     "import requests\n",
     "import io\n",
-    "import timeit"
+    "import timeit\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -48,11 +49,15 @@
    "id": "01739d55",
    "metadata": {},
    "source": [
-    "The code takes a list of tuples and collects the ones with the same first and fourth element in a list. Finally it retunrs them sorted by the 4th element in the tuple. \n",
+    "The code takes a list of tuples and collects the ones with the same first and fourth element in a list. Finally it returns the tuple with the largest 4th element in the tuple among the ones with a common 1st element.\n",
     "\n",
-    "The syntax  of the code can be improved as the number of comparison it makes are more than neccessary. Just one iteration or using smart indexing. The  style of the snippet is ok in some parts, but in others the variable's names do not provide significant meaning as \"li\" or \"op\". What those variables are supposed to mean or contain is not really clear. More meaningful and clear names could be used.\n",
+    "The syntax  of the code can be improved as the number of comparisons it makes are much more than the necessary ones. Some smart indexing can avoid many of the comparison; farther the two nested loops are not necessary. Some comparisons are repated several times, which can be avoided by a previous sorting or ignoring comparisosn that were already made.\n",
     "\n",
-    "The code does not really work because it compares the 4th element of the tuples, but the tuples only have 3 elements, therefore the comparison does not have a real meaning.\n"
+    "The  style of the snippet is ok in some parts, but in other parts the variables' names do not provide significant meaning, as \"li\" or \"op\". What those variables are supposed to contain is not really clear. More meaningful and clear names could be used.\n",
+    "\n",
+    "The code does not really work because it compares the 4th element of the tuples, but the tuples only have 3 elements, therefore the comparison will not work in tuples of that size.\n",
+    "\n",
+    "Overall, the syntax of the code can definitely be improves, and even if the code works with larger tuples is very inefficient.\n"
    ]
   },
   {
@@ -65,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5292f700",
    "metadata": {},
    "outputs": [],
@@ -99,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1fe8b945",
    "metadata": {},
    "outputs": [],
@@ -176,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8b4564db",
    "metadata": {},
    "outputs": [],
@@ -208,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "01d08274",
    "metadata": {},
    "outputs": [
@@ -241,9 +246,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.4e-04 +- 2.7e-05 s</td>\n",
-       "      <td>5.0e-05 +- 2.7e-06 s</td>\n",
-       "      <td>8.5e-06 +- 2.1e-07 s</td>\n",
+       "      <td>1.7e-04 +- 1.2e-05 s</td>\n",
+       "      <td>6.9e-05 +- 7.2e-06 s</td>\n",
+       "      <td>1.2e-05 +- 1.1e-06 s</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -251,7 +256,7 @@
       ],
       "text/plain": [
        "      Time code_snippet Time improved_snippet     Time scratch_sort\n",
-       "0  1.4e-04 +- 2.7e-05 s  5.0e-05 +- 2.7e-06 s  8.5e-06 +- 2.1e-07 s"
+       "0  1.7e-04 +- 1.2e-05 s  6.9e-05 +- 7.2e-06 s  1.2e-05 +- 1.1e-06 s"
       ]
      },
      "metadata": {},
@@ -265,7 +270,8 @@
     "df[\"Time scratch_sort\"] = str_t_scratch\n",
     "\n",
     "\n",
-    "display(df)"
+    "display(df)\n",
+    "#print(df.to_markdown())"
    ]
   },
   {
@@ -278,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1f2859bf",
    "metadata": {},
    "outputs": [],
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "e4b72874",
    "metadata": {
     "scrolled": true
@@ -374,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "34c7afc1",
    "metadata": {},
    "outputs": [
@@ -395,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acebc723",
+   "id": "2967dc88",
    "metadata": {},
    "outputs": [],
    "source": []
