PS3- Question 3 was added a stand alone script.

--- a/Alarcon_Pena_PS1.ipynb
+++ b/Alarcon_Pena_PS1.ipynb
@@ -82,7 +82,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "c13f6443",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -263,8 +265,7 @@
     "        return\n",
     "\n",
     "    \n",
-    "test_func(fib_flr)\n",
-    "\n"
+    "test_func(fib_flr)\n"
    ]
   },
   {
@@ -272,6 +273,7 @@
    "execution_count": 12,
    "id": "d66aa194",
    "metadata": {
+    "lines_to_next_cell": 2,
     "scrolled": true
    },
    "outputs": [],
@@ -395,9 +397,7 @@
     "    times[3,i] = np.median(np.array(timeit.repeat(\"fib_rnd(\"+str(n)+\")\",\n",
     "                                 setup,repeat=10,number=iters)))/iters\n",
     "    times[4,i] = np.median(np.array(timeit.repeat(\"fib_flr(\"+str(n)+\")\",\n",
-    "                                 setup,repeat=10,number=iters)))/iters\n",
-    "\n",
-    "    "
+    "                                 setup,repeat=10,number=iters)))/iters\n"
    ]
   },
   {
@@ -951,10 +951,10 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:light,md"
+   "formats": "ipynb,py:light,md"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -968,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
